Fix comment overflow issue

--- a/SoloLearn/src/containers/Comments/CommentItem.scss
+++ b/SoloLearn/src/containers/Comments/CommentItem.scss
@@ -59,7 +59,7 @@
 			margin-bottom: 8px;
 		}
 		.comment-edit-button {
-			color: #FFFFFF;
+			color: $white;
 		}
 	}
 	.reply-input {
